--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,6 @@
     <main>
 			      <section class=" portfolio">
 							<h1 class="portfolio-title visually-hidden">Портфоліо</h1>
-        <h2 class="filter-title visually-hidden">Фільтри</h2>
         <ul class="filter-list list">
           <li><button class="filter-btn">Усі</button></li>
           <li><button class="filter-btn">Веб-сайти</button></li>
@@ -43,14 +42,14 @@
 
         <ul class="portfolio-list list">
           <li class="portfolio-list-item">
-						<a href="./images/portfolio1.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio1.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="294" />
             <h3 class="portfolio-sub-title">Технокряк</h3>
             <p class="portfolio-description">Веб-сайт</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio2.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio2.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img
               src="./images/portfolio2.jpg"
               alt="New Orlean vs Golden Star"
@@ -62,28 +61,28 @@
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio3.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio3.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio3.jpg" alt="Seafood" width="370" height="294" />
             <h3 class="portfolio-sub-title">Ресторан <span lang="en">Seafood</span> </h3>
             <p class="portfolio-description">Додаток</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio4.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio4.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio4.jpg" alt="Prime" width="370" height="294" />
             <h3 class="portfolio-sub-title">Проєкт <span lang="en">Prime</span></h3>
             <p class="portfolio-description">Маркетинг</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio5.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio5.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio5.jpg" alt="Boxes" width="370" height="294" />
             <h3 class="portfolio-sub-title">Проєкт <span lang="en">Boxes</span></h3>
             <p class="portfolio-description">Додаток</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio6.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio6.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img
               src="./images/portfolio6.jpg"
               alt="Inspiration has no Borders"
@@ -96,21 +95,21 @@
           </li>
 
           <li class="portfolio-list-item">
-						<a href="./images/portfolio7.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio7.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio7.jpg" alt="Limited Edition" width="370" height="294" />
             <h3 class="portfolio-sub-title">Видання <span lang="en">Limited Edition</span></h3>
             <p class="portfolio-description">Дизайн</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio8.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio8.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio8.jpg" alt="LAB" width="370" height="294" />
             <h3 class="portfolio-sub-title">Проєкт <span lang="en">LAB</span></h3>
             <p class="portfolio-description">Маркетинг</p>
 						</a>
           </li>
           <li class="portfolio-list-item">
-						<a href="./images/portfolio9.jpg" target="_blank" rel="noreferrer noopener">
+						<a href="./images/portfolio9.jpg" class="link" target="_blank" rel="noreferrer noopener">
             <img src="./images/portfolio9.jpg" alt="Growing Business" width="370" height="294" />
             <h3 class="portfolio-sub-title" lang="en">Growing Business</h3>
             <p class="portfolio-description">Додаток</p>
